# python_project_template

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
project_name/: project_name.py
test/: test_project_name.py
