[tool.poetry]
name = "project_name"
version = "0.0.1"
description = "Some description"
authors = ["Jonathan Schweder <jonathanschweder@amazon.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
